[package]
name = "glenda"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["opengl", "graphics", "gamedev"]
description = "An opengl utility and renderer library."
repository = "https://github.com/blindley/glenda"
readme = "README.md"

[dependencies]
gl = "0.14"
stb_image = "0.3.0"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
